[package]
name = "smol-throttle"
version = "0.1.0"
authors = ["Alexander Polakov <a.polakov@iconic.vc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = { path = "../smol" }
libc = "0.2"
streaming-stats = "0.2"
futures-util = "0.3"


